modified:   .gitignore 	new file:   .vscode/launch.json 	new file:   package.json 	new file:   public/manifest.json 	modified:   src/App.js 	modified:   src/LandingPage.js 	modified:   src/Menu.js 	modified:   src/Specials.js 	new file:   src/data.json 	modified:   src/linear.js 	new file:   src/linear_cc.js 	modified:   src/vod.js

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,12 @@ yarn-debug.log*
 yarn-error.log*
 
 #files
-*.json
+package-lock.json
+/public/data.json
+/others/demotnscripts/input.ini.json
+/others/demotnscripts/output.ini.json
+/src/old/*.json
+/cors-proxy/*.*
 *.jsonl
 *.key
 *.log
