modified:   .gitignore 	new file:   IrisWOF/iris.ico 	new file:   IrisWOF/iris_logo_icon.png 	modified:   IrisWOF/iris_wof.py 	new file:   IrisWOF/iris_wof.spec 	renamed:    others/demotnscripts/crypto.py -> others/demotnscripts/crypto/crypto.py 	new file:   others/demotnscripts/crypto/crypto.spec 	modified:   src/App.js 	modified:   src/data.json

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /node_modules_a
 /cors-proxy/node_modules
 /public/specials
+/IrisWOF/build/*
 /.pnp
 .pnp.js
 
@@ -32,6 +33,8 @@ package-lock.json
 /others/demotnscripts/output.ini.json
 /src/old/*.json
 /cors-proxy/*.*
+/others/demotnscripts/crypto/build/*
+*.exe
 *.jsonl
 *.key
 *.log
