modified:   .gitignore 	modified:   IrisWOF/iris_wof.py 	new file:   public/SplashScreenBG.png 	new file:   public/SynamediaIrisWhite.png 	new file:   public/TopHeader.png 	new file:   public/Welcomeapp.png 	modified:   src/App.js 	modified:   src/Home.js 	modified:   src/Menu.css 	modified:   src/Menu.js 	modified:   src/Specials.js 	modified:   src/data.json 	modified:   src/header.css 	modified:   src/header.js 	modified:   src/index.css 	modified:   src/linear.css 	modified:   src/linear.js 	modified:   src/linear_cc.js 	modified:   src/vod.css 	modified:   src/vod.js 	modified:   tailwind.config.js

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ package-lock.json
 /src/old/*.json
 /cors-proxy/*.*
 /others/demotnscripts/crypto/build/*
+/reference_UI_design/*
 *.exe
 *.jsonl
 *.key
