--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "boto3": "^0.0.1",
     "dashjs": "^4.7.4",
     "moment": "^2.30.1",
+    "mqtt": "^5.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
